部分替换为新版jdk语法